core/unpackaged/main/default/objects/Activity/fields/Approval_Prints_Sent__c.field-meta.xml
<CustomField>
    <fullName>Approval_Prints_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Notes if approval prints have been sent to a customer</description>
    <inlineHelpText>Please check when approval prints are sent to the customer</inlineHelpText>
    <label>Approval Prints Sent</label>
    <type>Checkbox</type>
</CustomField>