core/unpackaged/main/default/objects/Activity/fields/Created_Date_Time_Actual__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Time_Actual__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date/Time (Actual)</label>
    <type>DateTime</type>
</CustomField>