core/unpackaged/main/default/objects/Activity/fields/Current_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Ship_Date__c</fullName>
    <description>The current order ship date</description>
    <inlineHelpText>Please enter the current order ship date</inlineHelpText>
    <label>Current Ship Date</label>
    <type>Date</type>
</CustomField>