core/unpackaged/main/default/objects/Activity/fields/Initial_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Contact_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Initial Contact Date</label>
    <type>Date</type>
</CustomField>