core/unpackaged/main/default/objects/Activity/fields/Opportunity_Customer_Request__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Customer_Request__c</fullName>
    <inlineHelpText>The originating opportunity's Customer Request Field.</inlineHelpText>
    <label>Opportunity Customer Request</label>
    <type>TextArea</type>
</CustomField>