core/unpackaged/main/default/objects/Activity/fields/Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Date__c</fullName>
    <description>The date the order was logged in PPI's systems</description>
    <inlineHelpText>Please enter the date the order was logged in PPI's systems</inlineHelpText>
    <label>Order Date</label>
    <type>Date</type>
</CustomField>