core/unpackaged/main/default/objects/Activity/fields/Order_Dollar_Amount__c.field-meta.xml
<CustomField>
    <fullName>Order_Dollar_Amount__c</fullName>
    <description>Order Dollar Amount</description>
    <inlineHelpText>Please enter the dollar amount of the order</inlineHelpText>
    <label>Order Dollar Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>