core/unpackaged/main/default/objects/Activity/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <description>The PPI Order Number associated with this task</description>
    <inlineHelpText>The PPI Order Number associated with this task</inlineHelpText>
    <label>Order Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>