core/unpackaged/main/default/objects/Activity/fields/Original_Scheduled_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Scheduled_Ship_Date__c</fullName>
    <description>The date an order was scheduled to ship when the order was placed in PPI's Systems</description>
    <inlineHelpText>Please enter the date the order was scheduled to ship when the order was placed in PPI's Systems</inlineHelpText>
    <label>Original Scheduled Ship Date</label>
    <type>Date</type>
</CustomField>