core/unpackaged/main/default/objects/Activity/fields/OwnerId_for_Visibility__c.field-meta.xml
<CustomField>
    <fullName>OwnerId_for_Visibility__c</fullName>
    <description>Used for visibility of owner ID in a task</description>
    <label>OwnerId for Visibility</label>
    <length>18</length>
    <type>Text</type>
</CustomField>