core/unpackaged/main/default/objects/Activity/fields/Related_Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunity_Owner__c</fullName>
    <label>Related Opportunity Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>