core/unpackaged/main/default/objects/Activity/fields/Time_to_Complete_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Complete_Minutes__c</fullName>
    <formula>IF(ISBLANK(CompletedDateTime),NULL,(CompletedDateTime - CreatedDate) *1440)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time to Complete (Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>