core/unpackaged/main/default/objects/Activity/fields/Waiting_On__c.field-meta.xml
<CustomField>
    <fullName>Waiting_On__c</fullName>
    <inlineHelpText>Please select who you are waiting on to complete this task.</inlineHelpText>
    <label>Waiting On</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Waiting_On</valueSetName>
    </valueSet>
</CustomField>