core/unpackaged/main/default/objects/Activity/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <description>PPI Warehouse</description>
    <inlineHelpText>Please select the PPI Warehouse</inlineHelpText>
    <label>Warehouse</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A - Algona</fullName>
            </value>
            <value>
                <fullName>B - Sacramento</fullName>
            </value>
            <value>
                <fullName>F - Dallas/Ft. Worth</fullName>
            </value>
            <value>
                <fullName>H - Humboldt</fullName>
            </value>
            <value>
                <fullName>I - Cleveland</fullName>
            </value>
            <value>
                <fullName>M - NE Service Center</fullName>
            </value>
            <value>
                <fullName>N - Alberta Canada</fullName>
            </value>
            <value>
                <fullName>R - PPI Canada</fullName>
            </value>
            <value>
                <fullName>U - Midwest Service Center</fullName>
            </value>
            <value>
                <fullName>W - Maysville</fullName>
            </value>
            <value>
                <fullName>1 - Pella</fullName>
            </value>
            <value>
                <fullName>2 - Lenox</fullName>
            </value>
            <value>
                <fullName>3 - Corning Idlers</fullName>
            </value>
            <value>
                <fullName>4 - Corning 1</fullName>
            </value>
            <value>
                <fullName>5 - Corning 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>