core/unpackaged/main/default/objects/Activity/fields/ZVC__Schedule_a_Zoom_Meeting__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Schedule_a_Zoom_Meeting__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick this to make this as a Zoom &amp; Calender event. This option will schedule a Zoom meeting and put the meeting link in the description.</inlineHelpText>
    <label>Schedule a Zoom Meeting</label>
    <type>Checkbox</type>
</CustomField>