core/unpackaged/main/default/objects/Activity/fields/ZVC__Session_History__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Session_History__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Session History</label>
    <referenceTo>ZVC__Session_History__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>