core/unpackaged/main/default/objects/Activity/fields/ZVC__Zoom_Meeting__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Zoom_Meeting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zoom Meeting</label>
    <referenceTo>ZVC__Zoom_Meeting__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>