core/unpackaged/main/default/objects/Activity/fields/ZVC__Zoom_Task_Type__c.field-meta.xml
<CustomField>
    <fullName>ZVC__Zoom_Task_Type__c</fullName>
    <label>Zoom Task Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>